Changes to be committed: 	new file:   .gitignore 	new file:   package-lock.json 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "profile",
-  "version": "0.1.0",
+  "name": "mohanarjunan-portfolio",
+  "version": "v3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
