--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "sass": "^1.83.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
