--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "mohanarjunan-portfolio",
-  "version": "v3.0",
+  "name": "mohanarjunan",
+  "version": "4.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "axios": "^1.8.1",
-    "next": "15.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "vanilla-infinite-marquee": "^1.0.12"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.5.4"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^2.5.1",
-    "@types/node": "^20.17.23",
+    "typescript": "^5",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
-    "sass": "^1.83.4",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4"
   }
 }
