--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.5.4",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "vanilla-infinite-marquee": "^1.0.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
