--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.json"],
   "exclude": ["node_modules"],
   "typeRoots": ["./node_modules/@types", "./src/types"]
 }
