--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-scrollbar": "^4.0.2",
     "vanilla-infinite-marquee": "^1.0.13"
   },
   "devDependencies": {
