--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "build": "next build"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "radix-ui": "^1.4.3",
